py3/classes/sysflow/grammar/sfqlParser.py
# Generated from sfql.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class sfqlParser(Parser):

    grammarFileName = "sfql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'sfql'",
        "'macro'",
        "'list'",
        "'items'",
        "'condition'",
        "'and'",
        "'or'",
        "'not'",
        "'<'",
        "'<='",
        "'>'",
        "'>='",
        "'='",
        "'!='",
        "'in'",
        "'contains'",
        "'icontains'",
        "'startswith'",
        "'pmatch'",
        "'exists'",
        "'['",
        "']'",
        "'('",
        "')'",
        "','",
        "'-'",
    ]

    symbolicNames = [
        "<INVALID>",
        "QUERY",
        "MACRO",
        "LIST",
        "ITEMS",
        "COND",
        "AND",
        "OR",
        "NOT",
        "LT",
        "LE",
        "GT",
        "GE",
        "EQ",
        "NEQ",
        "IN",
        "CONTAINS",
        "ICONTAINS",
        "STARTSWITH",
        "PMATCH",
        "EXISTS",
        "LBRACK",
        "RBRACK",
        "LPAREN",
        "RPAREN",
        "LISTSEP",
        "DECL",
        "DEF",
        "SEVERITY",
        "ID",
        "NUMBER",
        "PATH",
        "STRING",
        "WS",
        "NL",
        "COMMENT",
        "ANY",
    ]

    RULE_definitions = 0
    RULE_f_query = 1
    RULE_f_macro = 2
    RULE_f_list = 3
    RULE_expression = 4
    RULE_or_expression = 5
    RULE_and_expression = 6
    RULE_term = 7
    RULE_items = 8
    RULE_var = 9
    RULE_atom = 10
    RULE_binary_operator = 11
    RULE_unary_operator = 12

    ruleNames = [
        "definitions",
        "f_query",
        "f_macro",
        "f_list",
        "expression",
        "or_expression",
        "and_expression",
        "term",
        "items",
        "var",
        "atom",
        "binary_operator",
        "unary_operator",
    ]

    EOF = Token.EOF
    QUERY = 1
    MACRO = 2
    LIST = 3
    ITEMS = 4
    COND = 5
    AND = 6
    OR = 7
    NOT = 8
    LT = 9
    LE = 10
    GT = 11
    GE = 12
    EQ = 13
    NEQ = 14
    IN = 15
    CONTAINS = 16
    ICONTAINS = 17
    STARTSWITH = 18
    PMATCH = 19
    EXISTS = 20
    LBRACK = 21
    RBRACK = 22
    LPAREN = 23
    RPAREN = 24
    LISTSEP = 25
    DECL = 26
    DEF = 27
    SEVERITY = 28
    ID = 29
    NUMBER = 30
    PATH = 31
    STRING = 32
    WS = 33
    NL = 34
    COMMENT = 35
    ANY = 36

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class DefinitionsContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def f_macro(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.F_macroContext)
            else:
                return self.getTypedRuleContext(sfqlParser.F_macroContext, i)

        def f_list(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.F_listContext)
            else:
                return self.getTypedRuleContext(sfqlParser.F_listContext, i)

        def f_query(self):
            return self.getTypedRuleContext(sfqlParser.F_queryContext, 0)

        def EOF(self):
            return self.getToken(sfqlParser.EOF, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_definitions

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDefinitions"):
                listener.enterDefinitions(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDefinitions"):
                listener.exitDefinitions(self)

    def definitions(self):

        localctx = sfqlParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_definitions)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 28
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
                    if la_ == 1:
                        self.state = 26
                        self.f_macro()
                        pass

                    elif la_ == 2:
                        self.state = 27
                        self.f_list()
                        pass

                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == sfqlParser.DECL:
                self.state = 33
                self.f_query()

            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.state = 36
                self.match(sfqlParser.EOF)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class F_queryContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(sfqlParser.DECL, 0)

        def QUERY(self):
            return self.getToken(sfqlParser.QUERY, 0)

        def DEF(self):
            return self.getToken(sfqlParser.DEF, 0)

        def expression(self):
            return self.getTypedRuleContext(sfqlParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_f_query

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterF_query"):
                listener.enterF_query(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitF_query"):
                listener.exitF_query(self)

    def f_query(self):

        localctx = sfqlParser.F_queryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_f_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(sfqlParser.DECL)
            self.state = 40
            self.match(sfqlParser.QUERY)
            self.state = 41
            self.match(sfqlParser.DEF)
            self.state = 42
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class F_macroContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(sfqlParser.DECL, 0)

        def MACRO(self):
            return self.getToken(sfqlParser.MACRO, 0)

        def DEF(self, i: int = None):
            if i is None:
                return self.getTokens(sfqlParser.DEF)
            else:
                return self.getToken(sfqlParser.DEF, i)

        def ID(self):
            return self.getToken(sfqlParser.ID, 0)

        def COND(self):
            return self.getToken(sfqlParser.COND, 0)

        def expression(self):
            return self.getTypedRuleContext(sfqlParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_f_macro

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterF_macro"):
                listener.enterF_macro(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitF_macro"):
                listener.exitF_macro(self)

    def f_macro(self):

        localctx = sfqlParser.F_macroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_f_macro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(sfqlParser.DECL)
            self.state = 45
            self.match(sfqlParser.MACRO)
            self.state = 46
            self.match(sfqlParser.DEF)
            self.state = 47
            self.match(sfqlParser.ID)
            self.state = 48
            self.match(sfqlParser.COND)
            self.state = 49
            self.match(sfqlParser.DEF)
            self.state = 50
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class F_listContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(sfqlParser.DECL, 0)

        def LIST(self):
            return self.getToken(sfqlParser.LIST, 0)

        def DEF(self, i: int = None):
            if i is None:
                return self.getTokens(sfqlParser.DEF)
            else:
                return self.getToken(sfqlParser.DEF, i)

        def ID(self):
            return self.getToken(sfqlParser.ID, 0)

        def ITEMS(self):
            return self.getToken(sfqlParser.ITEMS, 0)

        def items(self):
            return self.getTypedRuleContext(sfqlParser.ItemsContext, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_f_list

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterF_list"):
                listener.enterF_list(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitF_list"):
                listener.exitF_list(self)

    def f_list(self):

        localctx = sfqlParser.F_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_f_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(sfqlParser.DECL)
            self.state = 53
            self.match(sfqlParser.LIST)
            self.state = 54
            self.match(sfqlParser.DEF)
            self.state = 55
            self.match(sfqlParser.ID)
            self.state = 56
            self.match(sfqlParser.ITEMS)
            self.state = 57
            self.match(sfqlParser.DEF)
            self.state = 58
            self.items()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_expression(self):
            return self.getTypedRuleContext(sfqlParser.Or_expressionContext, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

    def expression(self):

        localctx = sfqlParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.or_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Or_expressionContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.And_expressionContext)
            else:
                return self.getTypedRuleContext(sfqlParser.And_expressionContext, i)

        def OR(self, i: int = None):
            if i is None:
                return self.getTokens(sfqlParser.OR)
            else:
                return self.getToken(sfqlParser.OR, i)

        def getRuleIndex(self):
            return sfqlParser.RULE_or_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOr_expression"):
                listener.enterOr_expression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOr_expression"):
                listener.exitOr_expression(self)

    def or_expression(self):

        localctx = sfqlParser.Or_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_or_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.and_expression()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == sfqlParser.OR:
                self.state = 63
                self.match(sfqlParser.OR)
                self.state = 64
                self.and_expression()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class And_expressionContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.TermContext)
            else:
                return self.getTypedRuleContext(sfqlParser.TermContext, i)

        def AND(self, i: int = None):
            if i is None:
                return self.getTokens(sfqlParser.AND)
            else:
                return self.getToken(sfqlParser.AND, i)

        def getRuleIndex(self):
            return sfqlParser.RULE_and_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAnd_expression"):
                listener.enterAnd_expression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAnd_expression"):
                listener.exitAnd_expression(self)

    def and_expression(self):

        localctx = sfqlParser.And_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_and_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.term()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == sfqlParser.AND:
                self.state = 71
                self.match(sfqlParser.AND)
                self.state = 72
                self.term()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(sfqlParser.VarContext, 0)

        def NOT(self):
            return self.getToken(sfqlParser.NOT, 0)

        def term(self):
            return self.getTypedRuleContext(sfqlParser.TermContext, 0)

        def atom(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.AtomContext)
            else:
                return self.getTypedRuleContext(sfqlParser.AtomContext, i)

        def unary_operator(self):
            return self.getTypedRuleContext(sfqlParser.Unary_operatorContext, 0)

        def binary_operator(self):
            return self.getTypedRuleContext(sfqlParser.Binary_operatorContext, 0)

        def LPAREN(self):
            return self.getToken(sfqlParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(sfqlParser.RPAREN, 0)

        def IN(self):
            return self.getToken(sfqlParser.IN, 0)

        def PMATCH(self):
            return self.getToken(sfqlParser.PMATCH, 0)

        def items(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.ItemsContext)
            else:
                return self.getTypedRuleContext(sfqlParser.ItemsContext, i)

        def LISTSEP(self, i: int = None):
            if i is None:
                return self.getTokens(sfqlParser.LISTSEP)
            else:
                return self.getToken(sfqlParser.LISTSEP, i)

        def expression(self):
            return self.getTypedRuleContext(sfqlParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTerm"):
                listener.enterTerm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTerm"):
                listener.exitTerm(self)

    def term(self):

        localctx = sfqlParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        self._la = 0  # Token type
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(sfqlParser.NOT)
                self.state = 80
                self.term()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.atom()
                self.state = 82
                self.unary_operator()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.atom()
                self.state = 85
                self.binary_operator()
                self.state = 86
                self.atom()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.atom()
                self.state = 89
                _la = self._input.LA(1)
                if not (_la == sfqlParser.IN or _la == sfqlParser.PMATCH):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 90
                self.match(sfqlParser.LPAREN)
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [
                    sfqlParser.LT,
                    sfqlParser.GT,
                    sfqlParser.ID,
                    sfqlParser.NUMBER,
                    sfqlParser.PATH,
                    sfqlParser.STRING,
                ]:
                    self.state = 91
                    self.atom()
                    pass
                elif token in [sfqlParser.LBRACK]:
                    self.state = 92
                    self.items()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == sfqlParser.LISTSEP:
                    self.state = 95
                    self.match(sfqlParser.LISTSEP)
                    self.state = 98
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [
                        sfqlParser.LT,
                        sfqlParser.GT,
                        sfqlParser.ID,
                        sfqlParser.NUMBER,
                        sfqlParser.PATH,
                        sfqlParser.STRING,
                    ]:
                        self.state = 96
                        self.atom()
                        pass
                    elif token in [sfqlParser.LBRACK]:
                        self.state = 97
                        self.items()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 105
                self.match(sfqlParser.RPAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(sfqlParser.LPAREN)
                self.state = 108
                self.expression()
                self.state = 109
                self.match(sfqlParser.RPAREN)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ItemsContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(sfqlParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(sfqlParser.RBRACK, 0)

        def atom(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(sfqlParser.AtomContext)
            else:
                return self.getTypedRuleContext(sfqlParser.AtomContext, i)

        def LISTSEP(self, i: int = None):
            if i is None:
                return self.getTokens(sfqlParser.LISTSEP)
            else:
                return self.getToken(sfqlParser.LISTSEP, i)

        def getRuleIndex(self):
            return sfqlParser.RULE_items

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterItems"):
                listener.enterItems(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitItems"):
                listener.exitItems(self)

    def items(self):

        localctx = sfqlParser.ItemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_items)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(sfqlParser.LBRACK)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << sfqlParser.LT)
                    | (1 << sfqlParser.GT)
                    | (1 << sfqlParser.ID)
                    | (1 << sfqlParser.NUMBER)
                    | (1 << sfqlParser.PATH)
                    | (1 << sfqlParser.STRING)
                )
            ) != 0:
                self.state = 114
                self.atom()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == sfqlParser.LISTSEP:
                    self.state = 115
                    self.match(sfqlParser.LISTSEP)
                    self.state = 116
                    self.atom()
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 124
            self.match(sfqlParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sfqlParser.ID, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_var

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

    def var(self):

        localctx = sfqlParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(sfqlParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sfqlParser.ID, 0)

        def PATH(self):
            return self.getToken(sfqlParser.PATH, 0)

        def NUMBER(self):
            return self.getToken(sfqlParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(sfqlParser.STRING, 0)

        def LT(self):
            return self.getToken(sfqlParser.LT, 0)

        def GT(self):
            return self.getToken(sfqlParser.GT, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_atom

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAtom"):
                listener.enterAtom(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAtom"):
                listener.exitAtom(self)

    def atom(self):

        localctx = sfqlParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atom)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not (
                (
                    ((_la) & ~0x3F) == 0
                    and (
                        (1 << _la)
                        & (
                            (1 << sfqlParser.LT)
                            | (1 << sfqlParser.GT)
                            | (1 << sfqlParser.ID)
                            | (1 << sfqlParser.NUMBER)
                            | (1 << sfqlParser.PATH)
                            | (1 << sfqlParser.STRING)
                        )
                    )
                    != 0
                )
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Binary_operatorContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(sfqlParser.LT, 0)

        def LE(self):
            return self.getToken(sfqlParser.LE, 0)

        def GT(self):
            return self.getToken(sfqlParser.GT, 0)

        def GE(self):
            return self.getToken(sfqlParser.GE, 0)

        def EQ(self):
            return self.getToken(sfqlParser.EQ, 0)

        def NEQ(self):
            return self.getToken(sfqlParser.NEQ, 0)

        def CONTAINS(self):
            return self.getToken(sfqlParser.CONTAINS, 0)

        def ICONTAINS(self):
            return self.getToken(sfqlParser.ICONTAINS, 0)

        def STARTSWITH(self):
            return self.getToken(sfqlParser.STARTSWITH, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_binary_operator

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBinary_operator"):
                listener.enterBinary_operator(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBinary_operator"):
                listener.exitBinary_operator(self)

    def binary_operator(self):

        localctx = sfqlParser.Binary_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_binary_operator)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not (
                (
                    ((_la) & ~0x3F) == 0
                    and (
                        (1 << _la)
                        & (
                            (1 << sfqlParser.LT)
                            | (1 << sfqlParser.LE)
                            | (1 << sfqlParser.GT)
                            | (1 << sfqlParser.GE)
                            | (1 << sfqlParser.EQ)
                            | (1 << sfqlParser.NEQ)
                            | (1 << sfqlParser.CONTAINS)
                            | (1 << sfqlParser.ICONTAINS)
                            | (1 << sfqlParser.STARTSWITH)
                        )
                    )
                    != 0
                )
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Unary_operatorContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXISTS(self):
            return self.getToken(sfqlParser.EXISTS, 0)

        def getRuleIndex(self):
            return sfqlParser.RULE_unary_operator

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUnary_operator"):
                listener.enterUnary_operator(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUnary_operator"):
                listener.exitUnary_operator(self)

    def unary_operator(self):

        localctx = sfqlParser.Unary_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_unary_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(sfqlParser.EXISTS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
